<resources>
    <string name="app_name">AppGynRv</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Ejercicio">EJERCICIOS</string>
    <string name="Informe">INFORME</string>
    <string name="Tienda">TIENDA</string>
    <string name="Perfil">PERFIL</string>
    <string name="subtitP">Datos Del Usuario</string>
    <string name="etNom">Nombres</string>
    <string name="etDNI">DNI</string>
    <string name="etCorreo">CORREO</string>
    <string name="ape">Apellidos</string>
    <string name="etd">DNI</string>
    <string name="etyce">Celular</string>
    <string name="etcorre">Correo</string>
    <string name="etcell">Celular</string>
    <string name="etalt">Altura</string>
    <string name="etpesoo">Peso</string>
    <string name="etFech">Fecha Nac.</string>
    <string name="btnvip">Haste Premiun</string>
    <string name="btnG">Guardar</string>
    <string name="prueba1">IngreseCorreo</string>
    <string name="prueba2">Ingrese Contraseña</string>
    <string name="prueba3">Ingresar</string>
    <string name="textb">Busca tus datos</string>
    <string name="btbucar">BUSCAR</string>
    <string name="etcor">Ingrese su correo</string>
    <string name="etclav">Ingrese Palabra Clave</string>
    <string name="etnuevcontra">Ingrese Nueva Contraseña</string>
    <string name="btcambios">GUARDAR</string>
    <string name="titSal">Saltos De Tijeras</string>
    <string name="ettextinfor">Comienza con los pies y los brazos a los lados a continuacion salta con los piesb separados y las manos en la cabeza. Vuelve a la posicion original y realiza la siguiente repeticion. Este ejwercicio sirve para entrenar todo el cuerpo y trabajar todos los gtandes grupos musculares</string>
    <string name="submuscl">Musculos Resaltados</string>
    <string name="etzonaP">Zona Principal</string>
    <string name="etmusc">● Hombros</string>
    <string name="etaducto">● Aductores</string>
    <string name="etGem">● Gemelos</string>
    <string name="etcuadro">● Cuadriceps</string>
    <string name="etpech">● Pecho</string>
    <string name="etglue">● Gluteo</string>
    <string name="ettuturial">Tutorial</string>
    <string name="etanimacion">Animacion</string>
    <string name="ettutrutE">Comienza Tu Rutina De Ejercicios</string>
    <string name="ttrutina">Nivel De Rutina:</string>
    <string name="btninfoc">redireccion a Informacion de los ejercicios</string>
    <string name="btninit">INICIAR</string>
    <string name="ecscroll">es un scroll</string>
    <string name="etecroll">es un scroll</string>
    <string name="ettextinfo2">Comienza en posicion de flexion pero con las manos en alto sobre una silla o un banco.Luego preciona el cuerpo hacia arriba y hacia abajo con la fuerza de los brazos.Recuerda mantener el torso en linea recta.</string>
    <string name="titflea">Flexiones con Inclinacion</string>
    <string name="titpech">Estiramiento de Pecho</string>
    <string name="etinfopecho">Busca una puerta,colocate en posicion de estocada con los brazos en la marca y los codos un poco por debajo de los hombros.A comtinuacion, mueve el pecho hacia adelante lentamente.Manten esta posicion durante 30 - 40 segundos.despues vuelve a la posicion original lentamente.baja los brazos y realiza un par de rotaciones de hombro.</string>
    <string name="titiestira">Estiramiento de Cobra</string>
    <string name="etinfoestamientos">Tumbate boca abajo, dobla los codos y coloca las manos debajo de los hombros.A comtinuacion,levanta el pecho del suelo tanto como puedas.Manten la posicion durante unos segundos.</string>
    <string name="etinfoflexiones">Suba y baje el cuerpo con los brazos mantenga el cuerpo recto.Procure que los codos formen 45 grados con el tronco,este ejercicio trabaja los musculos del pecho, hombros,triceps,espalda y piernas.</string>
    <string name="titflex">Flexiones</string>
    <string name="pause">PAUSA</string>
    <string name="start">INICIO</string>
    <string name="scrolll">este es un scroll</string>
    <string name="titidetalles">Producto Seleccionado</string>
    <string name="btncart">boton imagen de carrito</string>
    <string name="imagenproducto">imagen de producto</string>
    <string name="etnameproducto">Aaqui cambiar el nombre de producto</string>
    <string name="etdescrip">Descripcion:</string>
    <string name="etinfoaqui">Aqui la info del producto</string>
    <string name="etcant">Cantidad del producto :</string>
    <string name="btnAgregarc">Agregar</string>
    <string name="etproducc">Producto:</string>
    <string name="titlist">LISTA CARRITO</string>
    <string name="btnim">imagen boton para redireccionar a carrito</string>
    <string name="btnpag">Pagar</string>
    <string name="textcant">Cantidad N°:</string>
    <string name="ivimagen">imagen de rv</string>
    <string name="txtnum">cantidad de producto</string>
    <string name="tnun">0</string>
    <string name="btnconfiguracion">EDITAR:CALENDARIO DE ENTRENAMIENTO SEMANAL</string>
    <string name="btnpagomen">PAGO MENSUAL S/30.00/MES</string>
    <string name="etinfopago">".SIN ANUNCIOS\n.MAS RUTINAS Y EJERCICIOS\n.ACTUALIZACIONES DE PRODUCTOS\n.PLANES DE ENTRENAMIENTOS ILIMITADOS "</string>
    <string name="botonsuplemento">Suplemento</string>
    <string name="botonotros">Otros</string>
    <string name="botonequipoentre">Equipos de Entrenamiento</string>
    <string name="btnequipoentre">E.Entrenamiento</string>
    <string name="botoncompra1">Comprar</string>
    <string name="botonpremium">Hazte Premium</string>
    <string name="etprecio">Precio:</string>
    <string name="etinfprecio">aqui el precio</string>
    <string name="tvcant">0</string>
    <string name="noprt">"Producto: "</string>
    <string name="etitprecioD">"Precio: "</string>
    <string name="titDescripD">"Descripcion: "</string>
    <string name="cero">0</string>
    <string name="btborra">boton para quitar un item</string>
    <string name="valPrecio">Precio:</string>
    <string name="numval">0.00</string>
    <string name="valsubtotot">Precio A Pagar:</string>
    <string name="valtotalf">0.00</string>
    <string name="valrepe">Repeticiones</string>
</resources>